fixed dragging tracker input on mobile

--- a/frontend/src/styles/gridItems/Tracker/_connections.scss
+++ b/frontend/src/styles/gridItems/Tracker/_connections.scss
@@ -1,5 +1,6 @@
 .tracker-input {
     padding: 1em;
+    touch-action: none;
     width: 100%;
     align-items: center;
     justify-items: center;
